nginx-ingress/hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - hello1.ingress.aanuoluwapoakinyera.com
    - hello2.ingress.aanuoluwapoakinyera.com
    - tsp-zoom.ingress.aanuoluwapoakinyera.com
    secretName: hello-kubernetes-tls
  rules:
  - host: "hello1.ingress.aanuoluwapoakinyera.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: "hello2.ingress.aanuoluwapoakinyera.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
  - host: "tsp-zoom.ingress.aanuoluwapoakinyera.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tsp-nodezoom
            port:
              number: 3000
